<?xml version="1.0"?>
<package>
  <name>joint_state_publisher</name>
  <version>2.0.0</version>
  <description>A node for publishing joint angles, either through a gui, or with default values.</description>
  <author>David Lu!!</author>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/joint_state_publisher</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>wxpython</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>wxpython</run_depend>

</package>